; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm.c_iwm_mvm_is_wifi_mcc_supported.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwm/extr_if_iwm.c_iwm_mvm_is_wifi_mcc_supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwm_softc = type { i32 }

@IWM_UCODE_TLV_API_WIFI_MCC_UPDATE = common dso_local global i32 0, align 4
@IWM_UCODE_TLV_CAPA_LAR_MULTI_MCC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwm_softc*)* @iwm_mvm_is_wifi_mcc_supported to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwm_mvm_is_wifi_mcc_supported(%struct.iwm_softc* %0) #0 {
  %2 = alloca %struct.iwm_softc*, align 8
  store %struct.iwm_softc* %0, %struct.iwm_softc** %2, align 8
  %3 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %4 = load i32, i32* @IWM_UCODE_TLV_API_WIFI_MCC_UPDATE, align 4
  %5 = call i64 @iwm_fw_has_api(%struct.iwm_softc* %3, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = load %struct.iwm_softc*, %struct.iwm_softc** %2, align 8
  %9 = load i32, i32* @IWM_UCODE_TLV_CAPA_LAR_MULTI_MCC, align 4
  %10 = call i64 @iwm_fw_has_capa(%struct.iwm_softc* %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br label %12

12:                                               ; preds = %7, %1
  %13 = phi i1 [ true, %1 ], [ %11, %7 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i64 @iwm_fw_has_api(%struct.iwm_softc*, i32) #1

declare dso_local i64 @iwm_fw_has_capa(%struct.iwm_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
